--- a/day 25/classwork.html
+++ b/day 25/classwork.html
@@ -1,4 +1,4 @@
-<h1>My top 3 movies/animes</h1>
+<!-- <h1>My top 3 movies/animes</h1>
 
 <nav>
     <ol>
@@ -15,4 +15,7 @@
         <img width="200" src="https://mattsheehanofficial.files.wordpress.com/2022/02/prison-break.jpg?w=1000"
         <br>
     </ol>
-</nav>
+</nav> -->
+
+
+
